2008-02-10  chl  <chl@tuxfamily.org>

	- add LICENCE and README files
	- make it build on MacOS X (thanks to Elias Pipping for the report and
	patch).
	- make it build on Alpine Linux, which is a Gentoo uclibc distro
	(thanks to Natanael Copa for the report and patches)

2008-02-08  chl  <chl@tuxfamily.org>

	- first announcement to OpenRCS developers