@@ -1,6 +1,6 @@
-lib_LTLIBRARIES =libopenbsd-compat.la
+noinst_LIBRARIES = libopenbsd-compat.a
 
-libopenbsd_compat_la_SOURCES = \
+libopenbsd_compat_a_SOURCES = \
 		  strlcat.c strlcpy.c strtonum.c fgetln.c getlogin.c
 
 INCLUDES = -I$(top_srcdir)/src/
